# RGBDPlaneDetection

./: .gitignore  README.md  RGBDPlaneDetection.sln  build_linux.sh  demo_RGBDPlaneDetection.sh  demo_linux.sh  demo_win.sh
RGBDPlaneDetection/: CMakeLists.txt  RGBDPlaneDetection.vcxproj  RGBDPlaneDetection.vcxproj.filters  main.cpp  plane_detection.cpp  plane_detection.h
RGBDPlaneDetection/include/MRF2.2/: BP-S.cpp  BP-S.h  GCoptimization.cpp  GCoptimization.h  ICM.cpp  ICM.h  LinkedBlockList.cpp  LinkedBlockList.h  Makefile  MaxProdBP.cpp  MaxProdBP.h  README.txt  TRW-S.cpp  TRW-S.h  block.h  energy.h  example  example.cpp  graph.cpp  graph.h  maxflow.cpp  mrf.cpp  mrf.h  regions-maxprod.cpp  regions-new.h  typeTruncatedQuadratic2D.h
RGBDPlaneDetection/include/peac/: AHCPlaneFitter.hpp
RGBDPlaneDetection/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  RGBDPlaneDetection.lastbuildstate  RGBDPlaneDetection.write.1.tlog  RGBDPlaneDetection_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
RGBDPlaneDetection/x64/Release/: CL.read.1.tlog  CL.write.1.tlog  RGBDPlaneDetection.lastbuildstate  RGBDPlaneDetection.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
x64/Debug/: RGBDPlaneDetection.exp  RGBDPlaneDetection.lib
x64/Release/: RGBDPlaneDetection.exp  RGBDPlaneDetection.lib
